--- a/assets/sass/blocks/_container.scss
+++ b/assets/sass/blocks/_container.scss
@@ -52,7 +52,7 @@
         height: 70vh;
         max-height: 70vh;
         width: 100%;
-        overflow-y: scroll;
+        overflow-y: auto;
         border-end-start-radius: $border-rad-xxl;
         border-end-end-radius: $border-rad-xxl;
     }
