--- a/assets/sass/blocks/_item.scss
+++ b/assets/sass/blocks/_item.scss
@@ -34,3 +34,14 @@
         color: white;
     }
 }
+
+.checked {
+
+    .item__detail {
+        &__title {
+            color: #ccc;
+            text-decoration: line-through;
+        }
+    }
+    
+}
