--- a/assets/sass/blocks/_item.scss
+++ b/assets/sass/blocks/_item.scss
@@ -15,6 +15,11 @@
             padding: 1rem;
             font-size: 1.5rem;
 
+            &:hover {
+                color: $color-sub-dark;
+
+            }
+
             @media (max-width: 480px){
                 margin: 0px;
                 padding: 0.5rem;
